Draft customization for personal use (removal of non-MIT-License copyright contents)

--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@ layout: base
 <article>
   <div class="container">
     <section>
+      <!--
       <p>
         I build custom web applications for small businesses and startups. I handle everything from
         analyzing business requirements to app development and hosting.
@@ -58,6 +59,13 @@ layout: base
         on your mind. Email me at <a href="mailto:wck555@gmail.com?subject=Question for Will Koehler">wck555@gmail.com</a>
         or use this form.
       </p>
+      -->
+      <p>
+      This is a work in progress.
+      </p>
+      Feel free to reach out about any question, comment or feedback.
+      Email me at <a href="mailto:mesbah.uddin@protonmail.com?subject=[mesbahuddin.org] Question for Mesbah Uddin">mesbah.uddin@protonmail.com</a>
+      or use this form.  
       <p>
         <form class='contact' method="post" action="//formspree.io/wck555+formspree@gmail.com">
           <input type="text" name="name" placeholder="Name"><br>
@@ -66,10 +74,13 @@ layout: base
           <input type="submit" value="Send">
         </form>
       </p>
+
+      <!--
       <p>
         Most days you can find me at <a href='http://saltmines.us'>The Salt Mines</a>, an
         awesome coworking site in Clintonville. Stop in any time.
       </p>
+      -->
 
     </section>
   </div>
